adicionando de testes de movimento com junit